sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:6: error: not found: value i
      if (!isSmaller(i,i+gap)) {
                     ^AlgGnomeSort:6: error: not found: value i
      if (!isSmaller(i,i+gap)) {
                       ^AlgGnomeSort:6: error: not found: value gap
      if (!isSmaller(i,i+gap)) {
                         ^AlgGnomeSort:7: error: not found: value i
        swap(i+gap,i)
             ^AlgGnomeSort:7: error: not found: value gap
        swap(i+gap,i)
               ^AlgGnomeSort:7: error: not found: value i
        swap(i+gap,i)
                   ^AlgGnomeSort:8: error: not found: value swapped
        swapped=true 
        ^AlgGnomeSort:9: error: not found: value i
        i+=1       
        ^AlgGnomeSort:11: error: not found: value i
  		else{i-=1}
                     ^AlgGnomeSort:14: error: not found: value i
  } while ((i>0)||(i<getCountValue()))
            ^AlgGnomeSort:14: error: not found: value i
  } while ((i>0)||(i<getCountValue()))
                   ^AlgGnomeSort:14: error: not found: value getCountValue
  } while ((i>0)||(i<getCountValue()))
                     ^