sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.code
def gnomeSort() {
do {
  
    
      if (!isSmaller(i,i+gap)) {
        swap(i+gap,i)
        swapped=true 
        i+=1       
       }
  		else{i-=1}
       
    
  } while ((i>0)||(i<getCountValue()))
  
}
